解决了头文件依赖

--- a/Version4/Makefile
+++ b/Version4/Makefile
@@ -1,5 +1,6 @@
 ## Version 4
 CXX = g++
+CXXFLAGS = -c -Wall
 TARGET = hello
 SRC = $(wildcard *.cpp) 
 #wildcard function will search all the matched files and stored their name
@@ -11,7 +12,7 @@ $(TARGET): $(OBJ)
 # $@ stand for target
 # $^ stand for objects
 
-$.o: %.cpp
+%.o: %.cpp
 	$(CXX) $(CXXFLAGS) $< -o $@
 # $< stand for the frist objects
 
